--- a/WindowsApplication/Ex39_ObjectOriented_Library/DatabaseDevelopement/SmartLinli.DatabaseDevelopement.nuspec
+++ b/WindowsApplication/Ex39_ObjectOriented_Library/DatabaseDevelopement/SmartLinli.DatabaseDevelopement.nuspec
@@ -2,13 +2,13 @@
 <package >
   <metadata>
     <id>SmartLinli.DatabaseDevelopement</id>
-    <version>0.0.0.9</version>
+    <version>0.0.0.12-alpha</version>
     <title>DatabaseDevelopement</title>
     <authors>SmartLin</authors>
     <owners>SmartLin</owners>
     <licenseUrl>http://LICENSE_URL_HERE_OR_DELETE_THIS_LINE</licenseUrl>
     <projectUrl>https://github.com/SmartLinli/Learningdatabasedevelopement</projectUrl>
-    <iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl>
+    <iconUrl>https://raw.githubusercontent.com/SmartLinli/LearningDatabaseDevelopement/master/WindowsApplication/Ex39_ObjectOriented_Library/design_art_King_of_Trash_Avatar_Big_32.jpg</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Basic functions for database developement</description>
     <releaseNotes>Summary of changes made in this release of the package.</releaseNotes>
