--- a/WindowsApplication/Ex41_Record_Reader/Record_Reader_RawSql/packages.config
+++ b/WindowsApplication/Ex41_Record_Reader/Record_Reader_RawSql/packages.config
@@ -17,8 +17,8 @@
   <package id="Microsoft.Extensions.FileProviders.Physical" version="3.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.FileSystemGlobbing" version="3.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Primitives" version="3.0.0" targetFramework="net472" />
-  <package id="Npgsql" version="4.0.7" targetFramework="net472" />
-  <package id="SmartLinli.DatabaseDevelopement" version="0.0.0.9" targetFramework="net472" />
+  <package id="Npgsql" version="4.0.9" targetFramework="net472" />
+  <package id="SmartLinli.DatabaseDevelopement" version="0.0.0.16-alpha" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
   <package id="System.IO" version="4.1.0" targetFramework="net472" />
   <package id="System.Linq" version="4.1.0" targetFramework="net472" />
@@ -27,6 +27,6 @@
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.6.0" targetFramework="net472" />
   <package id="System.Text.Encodings.Web" version="4.6.0" targetFramework="net472" />
   <package id="System.Text.Json" version="4.6.0" targetFramework="net472" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.3" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
 </packages>
