--- a/QuickDemo/Ex01_Command_Insert/Command_Insert/c.csproj
+++ b/QuickDemo/Ex01_Command_Insert/Command_Insert/c.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{2C39D309-5426-4DA4-9C63-B5B4DB157F54}</ProjectGuid>
+    <ProjectGuid>{85D0CB9A-6D4B-4409-8786-B3A1D888919F}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Command</RootNamespace>
-    <AssemblyName>Command</AssemblyName>
+    <RootNamespace>Command_Insert</RootNamespace>
+    <AssemblyName>Command_Insert</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <FileUpgradeFlags>
@@ -91,16 +91,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="frm_LogIn.cs">
+    <Compile Include="frm_SignUp.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frm_LogIn.Designer.cs">
-      <DependentUpon>frm_LogIn.cs</DependentUpon>
+    <Compile Include="frm_SignUp.designer.cs">
+      <DependentUpon>frm_SignUp.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="frm_LogIn.resx">
-      <DependentUpon>frm_LogIn.cs</DependentUpon>
+    <EmbeddedResource Include="frm_SignUp.resx">
+      <DependentUpon>frm_SignUp.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
