--- a/QuickDemo/Ex02_Command_Query/Command_Query/Command_Query.csproj
+++ b/QuickDemo/Ex02_Command_Query/Command_Query/Command_Query.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{85D0CB9A-6D4B-4409-8786-B3A1D888919F}</ProjectGuid>
+    <ProjectGuid>{2C39D309-5426-4DA4-9C63-B5B4DB157F54}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CommandNonQuery</RootNamespace>
-    <AssemblyName>CommandNonQuery</AssemblyName>
+    <RootNamespace>Command_Query</RootNamespace>
+    <AssemblyName>Command_Query</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <FileUpgradeFlags>
@@ -46,7 +46,7 @@
       <HintPath>..\packages\Npgsql.4.1.0\lib\net461\Npgsql.dll</HintPath>
     </Reference>
     <Reference Include="SmartLinli.DatabaseDevelopement.DbHelper, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\SmartLinli.DatabaseDevelopement.DbHelper.0.0.0.11-alpha\lib\net472\SmartLinli.DatabaseDevelopement.DbHelper.dll</HintPath>
+      <HintPath>..\packages\SmartLinli.DatabaseDevelopement.DbHelper.0.0.0.12-alpha\lib\net472\SmartLinli.DatabaseDevelopement.DbHelper.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
@@ -91,16 +91,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="frm_SignUp.cs">
+    <Compile Include="frm_LogIn.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frm_SignUp.designer.cs">
-      <DependentUpon>frm_SignUp.cs</DependentUpon>
+    <Compile Include="frm_LogIn.Designer.cs">
+      <DependentUpon>frm_LogIn.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="frm_SignUp.resx">
-      <DependentUpon>frm_SignUp.cs</DependentUpon>
+    <EmbeddedResource Include="frm_LogIn.resx">
+      <DependentUpon>frm_LogIn.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
