--- a/QuickDemo/Ex01_Command_Insert/Command_Insert/Command_Insert.csproj
+++ b/QuickDemo/Ex01_Command_Insert/Command_Insert/Command_Insert.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{933AD0BF-78F6-49B8-943A-5A4007CFCFA2}</ProjectGuid>
+    <ProjectGuid>{85D0CB9A-6D4B-4409-8786-B3A1D888919F}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RecordUpdate</RootNamespace>
-    <AssemblyName>RecordUpdate</AssemblyName>
+    <RootNamespace>Command_Insert</RootNamespace>
+    <AssemblyName>Command_Insert</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <FileUpgradeFlags>
@@ -46,7 +46,7 @@
       <HintPath>..\packages\Npgsql.4.1.0\lib\net461\Npgsql.dll</HintPath>
     </Reference>
     <Reference Include="SmartLinli.DatabaseDevelopement.DbHelper, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\SmartLinli.DatabaseDevelopement.DbHelper.0.0.0.11-alpha\lib\net472\SmartLinli.DatabaseDevelopement.DbHelper.dll</HintPath>
+      <HintPath>..\packages\SmartLinli.DatabaseDevelopement.DbHelper.0.0.0.20-alpha\lib\net472\SmartLinli.DatabaseDevelopement.DbHelper.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
@@ -54,9 +54,6 @@
     </Reference>
     <Reference Include="System.configuration" />
     <Reference Include="System.Core">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="System.Data.Entity">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Memory, Version=4.0.1.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
@@ -69,10 +66,6 @@
     <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=4.0.5.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.4.6.0\lib\netstandard2.0\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
     </Reference>
-    <Reference Include="System.Runtime.Serialization">
-      <RequiredTargetFramework>3.0</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="System.Security" />
     <Reference Include="System.Text.Encodings.Web, Version=4.0.4.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Text.Encodings.Web.4.6.0\lib\netstandard2.0\System.Text.Encodings.Web.dll</HintPath>
     </Reference>
@@ -98,16 +91,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="frm_StudentInfo.cs">
+    <Compile Include="frm_SignUp.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frm_StudentInfo.designer.cs">
-      <DependentUpon>frm_StudentInfo.cs</DependentUpon>
+    <Compile Include="frm_SignUp.designer.cs">
+      <DependentUpon>frm_SignUp.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="frm_StudentInfo.resx">
-      <DependentUpon>frm_StudentInfo.cs</DependentUpon>
+    <EmbeddedResource Include="frm_SignUp.resx">
+      <DependentUpon>frm_SignUp.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -119,7 +112,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <None Include="App.config" />
+    <None Include="app.config" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
