--- a/QuickDemo/Ex04_Record_Update/Record_Update/App.config
+++ b/QuickDemo/Ex04_Record_Update/Record_Update/App.config
@@ -1,9 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" /></startup><connectionStrings>
-    <add name="Pgsql" connectionString="Server=localhost;Database=EduBaseDemo;User ID=Administrator" providerName="Npgsql" />
-    <add name="Sql" connectionString="data source=(local);initial catalog=EduBaseDemo;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" /></startup>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -28,4 +25,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-</configuration>
+<connectionStrings>
+    <add name="Pgsql" connectionString="Server=localhost;Database=EduBaseDemo;User ID=Administrator" providerName="Npgsql" />
+    <add name="Sql" connectionString="data source=(local);initial catalog=EduBaseDemo;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+  </connectionStrings></configuration>
