--- a/WindowsApplication/Ex39_ObjectOriented_Library/SmartLinli.DatabaseDevelopement.DbHelper/SmartLinli.DatabaseDevelopement.DbHelper.csproj
+++ b/WindowsApplication/Ex39_ObjectOriented_Library/SmartLinli.DatabaseDevelopement.DbHelper/SmartLinli.DatabaseDevelopement.DbHelper.csproj
@@ -66,6 +66,7 @@
     <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.ValueTuple.4.5.0\lib\net47\System.ValueTuple.dll</HintPath>
     </Reference>
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -80,6 +81,7 @@
     <Compile Include="AdoDotNet\DbHelper\PgsqlHelper.cs" />
     <Compile Include="AdoDotNet\DbHelper\SqlHelper.cs" />
     <Compile Include="AdoDotNet\Exception.cs" />
+    <Compile Include="PresentationLayer\DataBindHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
