--- a/WindowsApplication/Ex69_ObjectOriented_Library/SmartLinli.DatabaseDevelopement/SmartLinli.DatabaseDevelopement.csproj
+++ b/WindowsApplication/Ex69_ObjectOriented_Library/SmartLinli.DatabaseDevelopement/SmartLinli.DatabaseDevelopement.csproj
@@ -167,11 +167,15 @@
     <Compile Include="DataAccessLayer\Exception.cs" />
     <Compile Include="DataAccessLayer\AdoDotNet\DbHelper\PgsqlHelper.cs" />
     <Compile Include="DataAccessLayer\AdoDotNet\DbHelper\SqlHelper.cs" />
-    <Compile Include="PresentationLayer\Component\BaseValidator.cs">
-      <SubType>Component</SubType>
-    </Compile>
+    <Compile Include="PresentationLayer\Component\BaseValidator.cs" />
     <Compile Include="PresentationLayer\Component\BaseValidator.Designer.cs">
       <DependentUpon>BaseValidator.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PresentationLayer\Component\ConfirmValidator.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="PresentationLayer\Component\ConfirmValidator.Designer.cs">
+      <DependentUpon>ConfirmValidator.cs</DependentUpon>
     </Compile>
     <Compile Include="PresentationLayer\Component\ExistValidator.cs">
       <SubType>Component</SubType>
