--- a/WindowsApplication/Ex69_ObjectOriented_Library/SmartLinli.DatabaseDevelopement/SmartLinli.DatabaseDevelopement.csproj
+++ b/WindowsApplication/Ex69_ObjectOriented_Library/SmartLinli.DatabaseDevelopement/SmartLinli.DatabaseDevelopement.csproj
@@ -183,6 +183,11 @@
     <Compile Include="PresentationLayer\Component\ExistValidator.Designer.cs">
       <DependentUpon>ExistValidator.cs</DependentUpon>
     </Compile>
+    <Compile Include="PresentationLayer\Component\InputValidator\ConfirmValidatingExtension.cs" />
+    <Compile Include="PresentationLayer\Component\InputValidator\DescriptionExtension.cs" />
+    <Compile Include="PresentationLayer\Component\InputValidator\ExistValidatingExtension.cs" />
+    <Compile Include="PresentationLayer\Component\InputValidator\LengthValidatingExtension.cs" />
+    <Compile Include="PresentationLayer\Component\InputValidator\RequiredInfoValidatingExtension.cs" />
     <Compile Include="PresentationLayer\Component\LengthValidator.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -195,6 +200,7 @@
     <Compile Include="PresentationLayer\Component\RequiredInfoValidator.Designer.cs">
       <DependentUpon>RequiredInfoValidator.cs</DependentUpon>
     </Compile>
+    <Compile Include="PresentationLayer\Component\InputValidator\ValidatingUnit.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
