--- a/WindowsApplication/5.1.Set_Relation/Set_Relation/Set_Relation.csproj
+++ b/WindowsApplication/5.1.Set_Relation/Set_Relation/Set_Relation.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{933AD0BF-78F6-49B8-943A-5A4007CFCFA2}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>EntityFramework_Crud</RootNamespace>
-    <AssemblyName>EntityFramework_Crud</AssemblyName>
+    <RootNamespace>Set_Relation</RootNamespace>
+    <AssemblyName>Set_Relation</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <FileUpgradeFlags>
@@ -24,10 +24,10 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Debug\EntityFramework_Crud.xml</DocumentationFile>
+    <DocumentationFile>bin\Debug\Set_Relation.xml</DocumentationFile>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -37,21 +37,16 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\EntityFramework_Crud.xml</DocumentationFile>
+    <DocumentationFile>bin\Release\Set_Relation.xml</DocumentationFile>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
-    </Reference>
-    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
+    <Reference Include="System.Data.Entity">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Runtime.Serialization">
@@ -71,45 +66,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Model\Class.cs" />
-    <Compile Include="Common\ImageTool.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Model\Course.cs" />
-    <Compile Include="Model\Department.cs" />
-    <Compile Include="Model\EduBase.cs" />
-    <Compile Include="Model\ClassMember.cs" />
-    <Compile Include="Repository\DepartmentRepository.cs" />
-    <Compile Include="Repository\ClassRepository.cs" />
-    <Compile Include="Repository\StudentRepository.cs" />
-    <Compile Include="Ui\frm_EducationManagement.cs">
+    <Compile Include="frm_EducationManagement.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Ui\frm_EducationManagement.designer.cs">
+    <Compile Include="frm_EducationManagement.designer.cs">
       <DependentUpon>frm_EducationManagement.cs</DependentUpon>
     </Compile>
-    <Compile Include="Ui\frm_EducationManagement_Operation.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Ui\frm_StudentInfo.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Ui\frm_StudentInfo.designer.cs">
-      <DependentUpon>frm_StudentInfo.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Ui\frm_StudentInfo_Operation.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Model\Major.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Model\Student.cs" />
-    <Compile Include="Model\StudentScore.cs" />
-    <EmbeddedResource Include="Ui\frm_EducationManagement.resx">
+    <EmbeddedResource Include="frm_EducationManagement.resx">
       <DependentUpon>frm_EducationManagement.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Ui\frm_StudentInfo.resx">
-      <DependentUpon>frm_StudentInfo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -121,8 +87,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <None Include="App.config" />
-    <None Include="packages.config" />
+    <None Include="app.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -133,7 +98,6 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
