--- a/WindowsApplication/6.3.ObjectOriented_SqlHelper/ObjectOriented_SqlHelper/ObjectOriented_SqlHelper.csproj
+++ b/WindowsApplication/6.3.ObjectOriented_SqlHelper/ObjectOriented_SqlHelper/ObjectOriented_SqlHelper.csproj
@@ -57,8 +57,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BusinessLogicLayer\IUserBll.cs" />
     <Compile Include="BusinessLogicLayer\UserBll.cs" />
     <Compile Include="Common\CrytoHelper.cs" />
+    <Compile Include="DataAccessLayer\IUserDal.cs" />
     <Compile Include="DataAccessLayer\SqlHelper.cs" />
     <Compile Include="DataAccessLayer\UserDal.cs" />
     <Compile Include="PresentationLayer\Component\BaseValidator.cs">
