--- a/WindowsApplication/6.5.ObjectOriented_MicroObjectRelationalMapping/ObjectOriented_Dapper/App.config
+++ b/WindowsApplication/6.5.ObjectOriented_MicroObjectRelationalMapping/ObjectOriented_Dapper/App.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <!-- 数据访问层类型：Sql为SQL Server，PgSql为PostgreSQL -->
-    <add key="DalType" value="Sql" />
+    <!-- 数据访问层类型：Sql为SQL Server，Pgsql为PostgreSQL -->
+    <add key="DalType" value="Pgsql" />
   </appSettings>
   <!-- 数据库连接串 -->
   <connectionStrings>
