--- a/WindowsApplication/6.6.ObjectOriented_ObjectRelationalMapping/ObjectOriented_EntityFramework/App.config
+++ b/WindowsApplication/6.6.ObjectOriented_ObjectRelationalMapping/ObjectOriented_EntityFramework/App.config
@@ -5,8 +5,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <appSettings>
-    <!-- 数据库管理系统：Sql为SQL Server，PgSql为PostgreSQL -->
-    <add key="Dbms" value="PgSql" />
+    <!-- 数据库管理系统：Sql为SQL Server，Pgsql为PostgreSQL -->
+    <add key="Dbms" value="Sql" />
   </appSettings>
   <!-- 数据库连接串 -->
   <connectionStrings>
