--- a/WindowsApplication/6.6.ObjectOriented_ObjectRelationalMapping/ObjectOriented_EntityFramework/ObjectOriented_EntityFramework.csproj
+++ b/WindowsApplication/6.6.ObjectOriented_ObjectRelationalMapping/ObjectOriented_EntityFramework/ObjectOriented_EntityFramework.csproj
@@ -92,10 +92,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BusinessLogicLayer\IUserBll.cs" />
     <Compile Include="BusinessLogicLayer\UserBll.cs" />
     <Compile Include="Common\CrytoHelper.cs" />
     <Compile Include="DataAccessLayer\DbContext\MyDbContext.cs" />
     <Compile Include="DataAccessLayer\EfHelper.cs" />
+    <Compile Include="DataAccessLayer\IUserDal.cs" />
     <Compile Include="DataAccessLayer\UserDal.cs" />
     <Compile Include="DataAccessLayer\DbContext\EduBasePgsql.cs" />
     <Compile Include="DataAccessLayer\DbContext\EduBaseSql.cs" />
@@ -106,9 +108,7 @@
     <Compile Include="PresentationLayer\Component\BaseValidator.Designer.cs">
       <DependentUpon>BaseValidator.cs</DependentUpon>
     </Compile>
-    <Compile Include="PresentationLayer\Component\ExistValidator.cs">
-      <SubType>Component</SubType>
-    </Compile>
+    <Compile Include="PresentationLayer\Component\ExistValidator.cs" />
     <Compile Include="PresentationLayer\Component\ExistValidator.Designer.cs">
       <DependentUpon>ExistValidator.cs</DependentUpon>
     </Compile>
