--- a/QuickDemo/6.Table_GridView/6.Table_GridView/Table_GridView.csproj
+++ b/QuickDemo/6.Table_GridView/6.Table_GridView/Table_GridView.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{C1BC64FE-70A5-4633-AA14-B2A05A227977}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>GridView</RootNamespace>
-    <AssemblyName>GridView</AssemblyName>
+    <RootNamespace>Table_GridView</RootNamespace>
+    <AssemblyName>Table_GridView</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
