--- a/WindowsApplication/6.6.ObjectOriented_ObjectRelationalMapping/ObjectOriented_EntityFramework/App.config
+++ b/WindowsApplication/6.6.ObjectOriented_ObjectRelationalMapping/ObjectOriented_EntityFramework/App.config
@@ -6,7 +6,7 @@
   </configSections>
   <appSettings>
     <!-- 数据库管理系统：Sql为SQL Server，Pgsql为PostgreSQL -->
-    <add key="Dbms" value="Sql" />
+    <add key="Dbms" value="Pgsql" />
   </appSettings>
   <!-- 数据库连接串 -->
   <connectionStrings>
@@ -27,6 +27,12 @@
       <provider invariantName="Npgsql" type="Npgsql.NpgsqlServices, EntityFramework6.Npgsql" />
     </providers>
   </entityFramework>
+  <!-- 若提示找不到数据提供程序，则需添加下列节点 -->
+  <system.data>
+    <DbProviderFactories>
+      <add name="Npgsql Data Provider" invariant="Npgsql" description="Data Provider for PostgreSQL" type="Npgsql.NpgsqlFactory, Npgsql" />
+    </DbProviderFactories>
+  </system.data>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
